fixed paragraph alignment on mobile

--- a/styles/demo.css
+++ b/styles/demo.css
@@ -122,7 +122,7 @@ header nav ul li a:hover {
   padding-top: 90px;
   text-align: center;
 }
-#primary p {
+#primary .grid-4 p {
   text-align: center;
 }
 
